--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,4 +1,4 @@
-:root {
+:root > * {
   --md-primary-fg-color:        #484c5a;
   --md-primary-fg-color--light: #ECB7B7;
   --md-primary-fg-color--dark:  #a92358;
