--- a/docs/theme_override_home/partials/header.html
+++ b/docs/theme_override_home/partials/header.html
@@ -149,32 +149,32 @@
       <a href="https://gbconsite.de/"><img src="https://gbconsite.de/wp-content/uploads/2019/09/logo_gbconsite_klein.png" width="160" height="39" alt="Logo gb consite" loading="lazy"></a>
     </div>
   
-      <style>
-      .md-login_button{
-      outline: white;
-      border: 0.1rem solid;
-      border-radius: 0.1rem;
-      /* color: var(--md-primary-fg-color); */
-      cursor: pointer;
-      display: inline-block;
-      font-weight: 700;
-      padding: 0.625em 2em;
-      transition: color 125ms,background-color 125ms,border-color 125ms;
-      font-weight: bold !important;
-      font-size: initial;
-      }
+#      <style>
+#      .md-login_button{
+#      outline: white;
+#      border: 0.1rem solid;
+#      border-radius: 0.1rem;
+#      /* color: var(--md-primary-fg-color); */
+#      cursor: pointer;
+#      display: inline-block;
+#      font-weight: 700;
+#      padding: 0.625em 2em;
+#      transition: color 125ms,background-color 125ms,border-color 125ms;
+#      font-weight: bold !important;
+#      font-size: initial;
+#      }
 
-      .md-login_button:focus,
-      .md-login_button:hover {
-      background-color: #2f6c8e;
-      border-color: white;       
-  }
+#      .md-login_button:focus,
+#      .md-login_button:hover {
+#      background-color: #2f6c8e;
+#      border-color: white;       
+#  }
 
-  </style>
-  <div class="md-login_button">
-    <a href="/users/sign_in"><span class="md-ellipsis"> LOGIN </span>
-    </a>
-  </div>
+#  </style>
+#  <div class="md-login_button">
+#    <a href="/users/sign_in"><span class="md-ellipsis"> LOGIN </span>
+#    </a>
+#  </div>
 
   </nav>
 
