--- a/docs/theme_override_home/partials/header.html
+++ b/docs/theme_override_home/partials/header.html
@@ -171,10 +171,12 @@
   }
 
   </style>
-#  <div class="md-login_button">
-#    <a href="/users/sign_in"><span class="md-ellipsis"> LOGIN </span>
-#    </a>
-#  </div>
+<!--  
+  <div class="md-login_button">
+    <a href="/users/sign_in"><span class="md-ellipsis"> LOGIN </span>
+    </a>
+  </div>
+-->
 
   </nav>
 
